--- a/src/backend/build.gradle
+++ b/src/backend/build.gradle
@@ -54,6 +54,8 @@ dependencies {
 	implementation 'wsdl4j:wsdl4j:1.6.3'
 	implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+	implementation 'com.github.java-json-tools:json-patch:1.13'
+	implementation 'javax.json:javax.json-api:1.1.4'
 	compileOnly 'org.mapstruct:mapstruct:1.5.5.Final'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 	runtimeOnly 'mysql:mysql-connector-java'
