--- a/src/backend/build.gradle
+++ b/src/backend/build.gradle
@@ -31,6 +31,9 @@ repositories {
 tasks.named('bootJar') {
 	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
+test {
+	useJUnitPlatform()
+}
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
