[Fixed] OC-773  #comment minor changes.  #time 5m

--- a/src/backend/src/main/resources/application_default.yml
+++ b/src/backend/src/main/resources/application_default.yml
@@ -114,7 +114,7 @@ spring:
   liquibase:
     change-log: classpath:/db/changelog/changelog-master.xml
   mvc:
-    throw-exception-if-no-handler-found: true
+    throw-exception-if-no-handler-found: true #enables exception handling for endpoints that is not defined in controllers
   web:
     resources:
       add-mappings=false:
