[Fixed] OC-805 #comment Fixed bug when header is null or empty. #time 10m

--- a/src/backend/src/main/resources/application_default.yml
+++ b/src/backend/src/main/resources/application_default.yml
@@ -185,8 +185,7 @@ opencelium:
   #   notification:                                                         #
   #    tools:                                                               #
   #      income_webhook:                                                    #
-  #        url:  first webhook,                                             #
-  #              second webhook                                             #
+  #        url: webhook                                                     #
   #                                                                         #
   ###########################################################################
   notification:
