--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -2,10 +2,12 @@ pipelines:
   branches:
     prod:
       - step:
-          name: Refresh Git Tags
+          name: Sync Tags
           script:
             - git fetch --tags # Fetch all tags from the remote repository
             - git pull --tags # Pull any new tags from the remote repository
+            - git tag -l | xargs git tag -d # Delete all local tags
+            - git fetch --tags # Fetch tags again after local deletion
       - step:
           name: Sync Prod Branch
           script:
