--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -2,15 +2,6 @@ pipelines:
   branches:
     prod:
       - step:
-          name: Sync Tags
-          script:
-            - git fetch --prune --tags # Fetch and prune all tags from the remote repository
-            - git pull --tags # Pull any new tags from the remote repository
-            - git tag -l | xargs git tag -d # Delete all local tags
-            - git fetch --tags # Fetch tags again after local deletion
-            - git push origin --delete $(git tag -l) # Delete all tags from the remote repository
-            - git push --tags # Push the remaining tags to the remote repository
-      - step:
           name: Sync Prod Branch
           script:
             - git remote add sync git@github.com:opencelium/opencelium.git
@@ -19,6 +10,7 @@ pipelines:
             - git push sync prod --tags --force
     dev:
       - step:
+          name: Sync Dev Branch
           script:
             - git remote add sync git@github.com:opencelium/opencelium.git
             - git checkout dev
