--- a/src/backend/build.gradle
+++ b/src/backend/build.gradle
@@ -59,6 +59,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'com.github.java-json-tools:json-patch:1.13'
 	implementation 'javax.json:javax.json-api:1.1.4'
+	implementation 'org.neo4j.driver:neo4j-java-driver:5.18.0'
 	compileOnly 'org.mapstruct:mapstruct:1.5.5.Final'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 	runtimeOnly 'mysql:mysql-connector-java'
