--- a/src/backend/.gitignore
+++ b/src/backend/.gitignore
@@ -12,6 +12,7 @@ src/main/resources/invoker/i-doit.xml
 src/main/resources/invoker/baramundi.xml
 src/main/resources/invoker/lansweeper.xml
 src/main/resources/invoker/jdisc.xml
+src/main/resources/invoker/fake_invoker.xml
 src/test/
 src/test/java/com/becon/opencelium/backend/ApplicationTests.java
 
