[Modified] OC-831 #comment Made some modifications #time 1h

--- a/src/backend/src/main/resources/db/changelog/springboot/application_changelog.yml
+++ b/src/backend/src/main/resources/db/changelog/springboot/application_changelog.yml
@@ -1,1 +1,7 @@
 versions:
+  - version: 1.0
+    changes:
+      - changeset: 1
+        operation: add
+        value: 8000
+        path: server.port
