[removed] OC-833 #comment removed neo4j check #time 30m

--- a/src/frontend/src/entities/connection/components/settings.json
+++ b/src/frontend/src/entities/connection/components/settings.json
@@ -3,8 +3,7 @@
     "APPLICATION": 0,
     "API": 9090,
     "SOCKET": 8082,
-    "KIBANA": 5601,
-    "NEO4J": 7474
+    "KIBANA": 5601
   },
   "PROTOCOL": "",
   "HOSTNAME": "",
