--- a/src/backend/src/main/resources/application_default.yml
+++ b/src/backend/src/main/resources/application_default.yml
@@ -24,7 +24,7 @@ server:
 spring:
   datasource:
     url: jdbc:mariadb://localhost:3306/opencelium?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Europe/Berlin
-    username: root
+    username: opencelium
     password: root
     initialization-mode: always
     driver-class-name: org.mariadb.jdbc.Driver
