--- a/src/backend/src/main/resources/db/changelog/springboot/application_changelog.yml
+++ b/src/backend/src/main/resources/db/changelog/springboot/application_changelog.yml
@@ -1,7 +1,11 @@
 versions:
-  - version: 1.0
+  - version: 4.0aa
     changes:
       - changeset: 1
         operation: add
-        value: 9090
-        path: server.port
+        value: 4.0
+        path: opencelium.version
+      - changeset: 2
+        operation: add
+        value: mongodb://oc_admin:secretsecret@localhost:27017/opencelium
+        path: spring.data.mongodb.uri
