--- a/src/backend/src/main/resources/application_default.yml
+++ b/src/backend/src/main/resources/application_default.yml
@@ -86,7 +86,7 @@ spring:
   #      username: admin
   #      password: secretsecret
   #     Example - mongodb://<username>:<password>@<host>:<port>/<database>
-  #      uri: mongodb://oc_admin:secretsecret@localhost:27017/opencelium
+      uri: mongodb://oc_admin:secretsecret@localhost:27017/opencelium
   jpa:
     properties:
       hibernate:
