[Fixed] OC-719 #comment fixed small changes related to update assistant.

--- a/tools/OC-Connector.yml
+++ b/tools/OC-Connector.yml
@@ -6,6 +6,22 @@ Description: ''
 FrameworkVersion: 6.0.26
 Provider:
   Operation:
+    CompanyCreate:
+      Description: ''
+      IncludeTicketData: '0'
+      Type: Company::CompanyCreate
+    CompanyGet:
+      Description: ''
+      IncludeTicketData: '0'
+      Type: Company::CompanyGet
+    CompanySearch:
+      Description: ''
+      IncludeTicketData: '0'
+      Type: Company::CompanySearch
+    CompanyUpdate:
+      Description: ''
+      IncludeTicketData: '0'
+      Type: Company::CompanyUpdate
     ConfigItemCreate:
       Description: ''
       IncludeTicketData: '0'
@@ -42,6 +58,22 @@ Provider:
       MappingOutbound:
         Type: Simple
       Type: ConfigItem::ConfigItemUpdate
+    CustomerCreate:
+      Description: ''
+      IncludeTicketData: '0'
+      Type: Customer::CustomerCreate
+    CustomerGet:
+      Description: ''
+      IncludeTicketData: '0'
+      Type: Customer::CustomerGet
+    CustomerSearch:
+      Description: ''
+      IncludeTicketData: '0'
+      Type: Customer::CustomerSearch
+    CustomerUpdate:
+      Description: ''
+      IncludeTicketData: '0'
+      Type: Customer::CustomerUpdate
     LinkCreate:
       Description: ''
       IncludeTicketData: '0'
@@ -88,6 +120,14 @@ Provider:
       KeepAlive: ''
       MaxLength: '1000000000'
       RouteOperationMapping:
+        CompanyCreate:
+          Route: /CompanyCreate/:UserLogin/:Password
+        CompanyGet:
+          Route: /CompanyGet/:UserLogin/:Password
+        CompanySearch:
+          Route: /CompanySearch/:UserLogin/:Password
+        CompanyUpdate:
+          Route: CompanyUpdate/:UserLogin/:Password
         ConfigItemCreate:
           Route: /ConfigItemCreate/:UserLogin/:Password
         ConfigItemDelete:
@@ -98,6 +138,14 @@ Provider:
           Route: /ConfigItemSearch/:UserLogin/:Password
         ConfigItemUpdate:
           Route: /ConfigItemUpdate/:UserLogin/:Password
+        CustomerCreate:
+          Route: /CustomerCreate/:UserLogin/:Password
+        CustomerGet:
+          Route: /CustomerGet/:UserLogin/:Password
+        CustomerSearch:
+          Route: /CustomerSearch/:UserLogin/:Password
+        CustomerUpdate:
+          Route: CustomerUpdate/:UserLogin/:Password
         LinkCreate:
           Route: /LinkCreate/:UserLogin/:Password
         LinkDelete:
