[Modified] OC-756 #comment Modified name of health indicator for mongoDB and mariaDB #time 15m

--- a/src/backend/src/main/resources/db/changelog/springboot/application_changelog.yml
+++ b/src/backend/src/main/resources/db/changelog/springboot/application_changelog.yml
@@ -1,6 +1,6 @@
 # operations: add, modify, delete, rename.
 versions:
-  - version: 4.0
+  - version: 4.1
     changes:
       - changeset: 1
         operation: add
@@ -13,3 +13,6 @@ versions:
       - changeset: 3
         operation: delete
         path: spring.neo4j
+      - changeset: 4
+        operation: delete
+        path: opencelium.notification.tools.teams
