[Modified] OC-756 #comment small changes #time 2m

--- a/src/backend/src/main/resources/application_default.yml
+++ b/src/backend/src/main/resources/application_default.yml
@@ -182,6 +182,8 @@ opencelium:
   connector:
     security:
       key: it's secret key
+  installation:
+    type: sources
 #  rest_template:
 #    proxy:
 #      host: 127.0.0.1
