[Modified] OC-508 #comment changed version to 4.1 #time 10m

--- a/src/backend/src/main/resources/db/changelog/springboot/application_changelog.yml
+++ b/src/backend/src/main/resources/db/changelog/springboot/application_changelog.yml
@@ -23,3 +23,9 @@ versions:
         operation: add
         value: sources
         path: opencelium.installation.type
+  - version: 4.1
+    changes:
+      - changeset: 1
+        operation: add
+        value: 4.1
+        path: opencelium.version
