[Added] OC-733 #comment add changelog to that will add or change secret key to a 256 bit #time 20m

--- a/src/backend/src/main/resources/db/changelog/springboot/application_changelog.yml
+++ b/src/backend/src/main/resources/db/changelog/springboot/application_changelog.yml
@@ -29,3 +29,7 @@ versions:
         operation: add
         value: 4.1
         path: opencelium.version
+      - changeset: 2
+        operation: add
+        value: 84bbce3d33de467b47b7e76c2563769!3f9aff968def8ef2674856f67ae8a93f
+        path: opencelium.token.secret
