[Added] OC-908 #comment Added Subscription functionality #time 2d

--- a/src/backend/src/main/resources/application_default.yml
+++ b/src/backend/src/main/resources/application_default.yml
@@ -181,6 +181,9 @@ opencelium:
         url: {insert you webhook url here}
   installation:
     type: sources
+  service_portal:
+    base_url: "https://api.serviceportal.com"
+    token: "your-token-here"
 #  rest_template:
 #    proxy:
 #      host: 127.0.0.1
