[Added] OC-879 #comment Added validation of machine data for activation request #time 2h

--- a/src/backend/src/main/resources/application_default.yml
+++ b/src/backend/src/main/resources/application_default.yml
@@ -178,7 +178,7 @@ opencelium:
   notification:
     tools:
       incoming_webhook:
-        url: {insert you webhook url here}
+        url: {insert your webhook url here}
   installation:
     type: sources
   service_portal:
