--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -62,6 +62,7 @@
     "react-image-crop": "^9.0.5",
     "react-json-view": "^1.21.3",
     "react-panelgroup": "^1.0.12",
+    "react-qr-code": "^2.0.15",
     "react-redux": "^7.2.6",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
