[Fixed] OC-879 #comment minor changes #time 1m

--- a/src/backend/src/main/resources/application_default.yml
+++ b/src/backend/src/main/resources/application_default.yml
@@ -111,6 +111,11 @@ spring:
   web:
     resources:
       add-mappings=false:
+###########################################################################
+#                                                                         #
+#   LDAP configuration section.                                           #
+#                                                                         #
+###########################################################################
 #  security:
 #    ldap:
 #      # LDAP server URL
